force-app/main/default/objects/PDF_Data__b/PDF_Data__b.object-meta.xml
<CustomObject>
    <label>PDF_Data</label>
    <pluralLabel>PDF_Data</pluralLabel>
</CustomObject>