force-app/main/default/objects/PDF_Data__b/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Id</description>
    <label>Id</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>