force-app/main/default/objects/PDF_Data__b/fields/PDF_Content__c.field-meta.xml
<CustomField>
    <fullName>PDF_Content__c</fullName>
    <description>Content of the pdf</description>
    <label>PDF_Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>