force-app/main/default/objects/PDF_Data__b/fields/PDF_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Id__c</fullName>
    <label>PDF_Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>